Skip to content

Slave test fails

[0000611000000040] main libvlc warning: cannot read /home/remi/videolan/vlc/build/src/.libs/vlc/plugins/plugins.dat: No such file or directory
libdvdnav: Using dvdnav version 6.0.0
libdvdread: Couldn't find device name.
libdvdread:DVDOpenFilePath:findDVDFile /VIDEO_TS/VIDEO_TS.IFO failed
libdvdread:DVDOpenFilePath:findDVDFile /VIDEO_TS/VIDEO_TS.BUP failed
libdvdread: Can't open file VIDEO_TS.IFO.
libdvdnav: vm: failed to read VIDEO_TS.IFO
[0000611000014040] main libvlc warning: cannot read /home/remi/videolan/vlc/build/src/.libs/vlc/plugins/plugins.dat: No such file or directory
libdvdnav: Using dvdnav version 6.0.0
libdvdread: Couldn't find device name.
libdvdread:DVDOpenFilePath:findDVDFile /VIDEO_TS/VIDEO_TS.IFO failed
libdvdread:DVDOpenFilePath:findDVDFile /VIDEO_TS/VIDEO_TS.BUP failed
libdvdread: Can't open file VIDEO_TS.IFO.
libdvdnav: vm: failed to read VIDEO_TS.IFO
libdvdnav: Using dvdnav version 6.0.0
libdvdread: Couldn't find device name.
libdvdread:DVDOpenFilePath:findDVDFile /VIDEO_TS/VIDEO_TS.IFO failed
libdvdread:DVDOpenFilePath:findDVDFile /VIDEO_TS/VIDEO_TS.BUP failed
libdvdread: Can't open file VIDEO_TS.IFO.
libdvdnav: vm: failed to read VIDEO_TS.IFO
../../src/preparser/preparser.c:109:12: runtime error: member access within misaligned address 0xbebebebebebebebe for type 'struct input_preparser_req_t', which requires 8 byte alignment
0xbebebebebebebebe: note: pointer points here
<memory cannot be printed>
AddressSanitizer:DEADLYSIGNAL
=================================================================
==26599==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x7f8e3f61f1e1 bp 0x7f8e33f08810 sp 0x7f8e33f087d0 T9)
==26599==The signal is caused by a READ memory access.
==26599==Hint: address points to the zero page.
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f8e3f61f1e0 in OnParserSubtreeAdded ../../src/preparser/preparser.c:109
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f8e3f6373aa in input_item_parser_InputEvent ../../src/input/item.c:1362
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f8e3f67a74b in input_SendEvent ../../src/input/event.h:35
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f8e3f67c490 in input_SendEventParsing ../../src/input/event.h:267
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f8e3f6adfa2 in EsOutVaControlLocked ../../src/input/es_out.c:3107
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f8e3f6afdde in EsOutControl ../../src/input/es_out.c:3193
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f8e3f6b7348 in es_out_vaControl ../../include/vlc_es_out.h:158
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f8e3f6be028 in ControlLocked ../../src/input/es_out_timeshift.c:725
    [#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f8e3f6be4e6 in Control ../../src/input/es_out_timeshift.c:762
    [#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7f8e34790556 in es_out_vaControl ../../include/vlc_es_out.h:158
    [#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x7f8e3479067e in es_out_Control ../../include/vlc_es_out.h:167
    [#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x7f8e347908f7 in Demux ../../modules/demux/directory.c:43
    [#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x7f8e3f6cf77c in demux_Demux ../../include/vlc_demux.h:294
    [#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7f8e3f6d8225 in MainLoopDemux ../../src/input/input.c:549
    [#14](https://code.videolan.org/videolan/vlc/-/issues/14) 0x7f8e3f6da46b in MainLoop ../../src/input/input.c:691
    [#15](https://code.videolan.org/videolan/vlc/-/issues/15) 0x7f8e3f6d7c90 in Preparse ../../src/input/input.c:504
    [#16](https://code.videolan.org/videolan/vlc/-/issues/16) 0x7f8e3ede2fa2 in start_thread /build/glibc-vjB4T1/glibc-2.28/nptl/pthread_create.c:486
    [#17](https://code.videolan.org/videolan/vlc/-/issues/17) 0x7f8e3ed134ce in clone (/lib/x86_64-linux-gnu/libc.so.6+0xf94ce)

AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV ../../src/preparser/preparser.c:109 in OnParserSubtreeAdded
Thread T9 created by T5 here:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f8e40d63db0 in __interceptor_pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x50db0)
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f8e3f8e4d56 in vlc_clone_attr ../../src/posix/thread.c:421
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f8e3f8e4f41 in vlc_clone ../../src/posix/thread.c:433
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f8e3f6d3def in input_Start ../../src/input/input.c:176
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f8e3f6376b6 in input_item_Parse ../../src/input/item.c:1384
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f8e3f61f907 in PreparserOpenInput ../../src/preparser/preparser.c:131
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f8e3f84c261 in Thread ../../src/misc/background_worker.c:234
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f8e3ede2fa2 in start_thread /build/glibc-vjB4T1/glibc-2.28/nptl/pthread_create.c:486

Thread T5 created by T0 here:
    [#0](https://code.videolan.org/videolan/vlc/-/issues/0) 0x7f8e40d63db0 in __interceptor_pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x50db0)
    [#1](https://code.videolan.org/videolan/vlc/-/issues/1) 0x7f8e3f8e4d56 in vlc_clone_attr ../../src/posix/thread.c:421
    [#2](https://code.videolan.org/videolan/vlc/-/issues/2) 0x7f8e3f8e522c in vlc_clone_detach ../../src/posix/thread.c:483
    [#3](https://code.videolan.org/videolan/vlc/-/issues/3) 0x7f8e3f84caed in SpawnThread ../../src/misc/background_worker.c:277
    [#4](https://code.videolan.org/videolan/vlc/-/issues/4) 0x7f8e3f84d02f in background_worker_Push ../../src/misc/background_worker.c:305
    [#5](https://code.videolan.org/videolan/vlc/-/issues/5) 0x7f8e3f621b1e in input_preparser_Push ../../src/preparser/preparser.c:286
    [#6](https://code.videolan.org/videolan/vlc/-/issues/6) 0x7f8e3f57ec46 in vlc_MetadataRequest ../../src/libvlc.c:523
    [#7](https://code.videolan.org/videolan/vlc/-/issues/7) 0x7f8e3f57eeda in libvlc_MetadataRequest ../../src/libvlc.c:549
    [#8](https://code.videolan.org/videolan/vlc/-/issues/8) 0x7f8e3ee90ec5 in media_parse ../../lib/media.c:811
    [#9](https://code.videolan.org/videolan/vlc/-/issues/9) 0x7f8e3ee91176 in libvlc_media_parse_with_options ../../lib/media.c:854
    [#10](https://code.videolan.org/videolan/vlc/-/issues/10) 0x55f82fd43906 in media_parse_sync ../../test/libvlc/slaves.c:45
    [#11](https://code.videolan.org/videolan/vlc/-/issues/11) 0x55f82fd44418 in test_media_has_slaves_from_parent ../../test/libvlc/slaves.c:116
    [#12](https://code.videolan.org/videolan/vlc/-/issues/12) 0x55f82fd45141 in main ../../test/libvlc/slaves.c:207
    [#13](https://code.videolan.org/videolan/vlc/-/issues/13) 0x7f8e3ec3e09a in __libc_start_main ../csu/libc-start.c:308

==26599==ABORTING
FAIL test_libvlc_slaves (exit status: 1)
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information