preparser: fix dereference of uninitialized pointer

task->ref could be accessed from the input item preparser before being set.

Fixes #22377